--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react-native": "0.40.0",
 		"react-native-linear-gradient": "^2.0.0",
 		"react-native-scrollable-tab-view": "^0.7.1",
+		"react-navigation": "^1.0.0-beta.1",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0"
 	},
